--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -4,93 +4,92 @@ CC = cc
 
 LIB = ar rcs
 
-FLAGS = -Werror -Wall -Wextra // includes gnl?
+FLAGS = -Werror -Wall -Wextra -I ./includes
+
+LIBFT_PATH = libft
 
 PRINTF_PATH = Printf
-
-OBJS_DIR = objs
+PRINTF = $(PRINTF_PATH)/libftprintf.a
 
 GNL_PATH = Get_next_line
 
-FILES = ft_isalpha.c\
-	ft_isdigit.c\
-	ft_isalnum.c\
-	ft_isascii.c\
-	ft_isprint.c\
-	ft_strlen.c\
-	ft_memset.c\
-	ft_bzero.c\
-	ft_memcpy.c\
-	ft_memmove.c\
-	ft_strlcpy.c\
-	ft_strlcat.c\
-	ft_toupper.c\
-	ft_tolower.c\
-	ft_strchr.c\
-	ft_strrchr.c\
-	ft_strncmp.c\
-	ft_memchr.c\
-	ft_memcmp.c\
-	ft_strnstr.c\
-	ft_atoi.c\
-	ft_calloc.c\
-	ft_strdup.c\
-	ft_substr.c\
-	ft_strjoin.c\
-	ft_strtrim.c\
-	ft_split.c\
-	ft_itoa.c\
-	ft_strmapi.c\
-	ft_striteri.c\
-	ft_putchar_fd.c\
-	ft_putstr_fd.c\
-	ft_putendl_fd.c\
-	ft_putnbr_fd.c\
-	$(GNL_PATH)/get_next_line.c\
-	$(GNL_PATH)/get_next_line_bonus.c\
-	$(GNL_PATH)/get_next_line_utils.c\
+LIBFT_FILES = $(LIBFT_PATH)/ft_isalpha.c\
+	$(LIBFT_PATH)/ft_isdigit.c\
+	$(LIBFT_PATH)/ft_isalnum.c\
+	$(LIBFT_PATH)/ft_isascii.c\
+	$(LIBFT_PATH)/ft_isprint.c\
+	$(LIBFT_PATH)/ft_strlen.c\
+	$(LIBFT_PATH)/ft_memset.c\
+	$(LIBFT_PATH)/ft_bzero.c\
+	$(LIBFT_PATH)/ft_memcpy.c\
+	$(LIBFT_PATH)/ft_memmove.c\
+	$(LIBFT_PATH)/ft_strlcpy.c\
+	$(LIBFT_PATH)/ft_strlcat.c\
+	$(LIBFT_PATH)/ft_toupper.c\
+	$(LIBFT_PATH)/ft_tolower.c\
+	$(LIBFT_PATH)/ft_strchr.c\
+	$(LIBFT_PATH)/ft_strrchr.c\
+	$(LIBFT_PATH)/ft_strncmp.c\
+	$(LIBFT_PATH)/ft_memchr.c\
+	$(LIBFT_PATH)/ft_memcmp.c\
+	$(LIBFT_PATH)/ft_strnstr.c\
+	$(LIBFT_PATH)/ft_atoi.c\
+	$(LIBFT_PATH)/ft_calloc.c\
+	$(LIBFT_PATH)/ft_strdup.c\
+	$(LIBFT_PATH)/ft_substr.c\
+	$(LIBFT_PATH)/ft_strjoin.c\
+	$(LIBFT_PATH)/ft_strtrim.c\
+	$(LIBFT_PATH)/ft_split.c\
+	$(LIBFT_PATH)/ft_itoa.c\
+	$(LIBFT_PATH)/ft_strmapi.c\
+	$(LIBFT_PATH)/ft_striteri.c\
+	$(LIBFT_PATH)/ft_putchar_fd.c\
+	$(LIBFT_PATH)/ft_putstr_fd.c\
+	$(LIBFT_PATH)/ft_putendl_fd.c\
+	$(LIBFT_PATH)/ft_putnbr_fd.c\
+
+BONUS = $(LIBFT_PATH)/ft_lstnew_bonus.c\
+	$(LIBFT_PATH)/ft_lstadd_front_bonus.c\
+	$(LIBFT_PATH)/ft_lstsize_bonus.c\
+	$(LIBFT_PATH)/ft_lstlast_bonus.c\
+	$(LIBFT_PATH)/ft_lstadd_back_bonus.c\
+	$(LIBFT_PATH)/ft_lstdelone_bonus.c\
+	$(LIBFT_PATH)/ft_lstclear_bonus.c\
+	$(LIBFT_PATH)/ft_lstiter_bonus.c\
+	$(LIBFT_PATH)/ft_lstmap_bonus.c\
+
+GNL_FILES = $(GNL_PATH)/get_next_line_bonus.c\
 	$(GNL_PATH)/get_next_line_utils_bonus.c\
 
-BONUS = ft_lstnew_bonus.c\
-	ft_lstadd_front_bonus.c\
-	ft_lstsize_bonus.c\
-	ft_lstlast_bonus.c\
-	ft_lstadd_back_bonus.c\
-	ft_lstdelone_bonus.c\
-	ft_lstclear_bonus.c\
-	ft_lstiter_bonus.c\
-	ft_lstmap_bonus.c\
+PRINTF_FILES = $(PRINTF_PATH)/ft_printf.c\
+	$(PRINTF_PATH)/ft_putchar.c\
+	$(PRINTF_PATH)/ft_putnbr.c\
+	$(PRINTF_PATH)/ft_putstr.c\
+	$(PRINTF_PATH)/ft_unsnb.c\
+	$(PRINTF_PATH)/ft_address.c\
+	$(PRINTF_PATH)/ft_hexadec.c\
 
-OBJECTS = $(FILES:%.c=$(OBJS_DIR)/%.o)
-OBJ_BONUS = $(BONUS:%.c=$(OBJS_DIR)/%.o)
+LIBFT_OBJS = $(LIBFT_FILES:%.c=%.o)
+LIBFT_OBJS_BONUS = $(BONUS:%.c=%.o)
+GNL_OBJS = $(GNL_FILES:%.c=%.o)
+PRINTF_OBJS = $(PRINTF_FILES:%.c=%.o)
 
 all: printf $(NAME)
 
-printf:
-	@if [ ! -f "$(PRINTF_PATH)/libftprintf.a" ]; then make -s -C $(PRINTF_PATH)
+$(NAME): $(LIBFT_OBJS) $(LIBFT_OBJS_BONUS) $(GNL_OBJS) $(PRINTF_OBJS)
+	$(LIB) $(NAME) $(LIBFT_OBJS) $(LIBFT_OBJS_BONUS) $(GNL_OBJS) $(PRINTF_OBJS)
 
-$(NAME): $(OBJECTS)
-	$(LIB) $(NAME) $(OBJECTS)
-
-$(OBJS_DIR)/%.o: %.c | $(OBJS_DIR)
+%.o: %.c
 	$(CC) $(FLAGS) -c $< -o $@
 
-$(OBJS_DIR):
-	mkdir -p $(OBJS_DIR)
-
-bonus: $(OBJECTS) $(OBJ_BONUS)
-	$(LIB) $(NAME) $(OBJECTS) $(OBJ_BONUS)
-
 clean:
-	@rm -rf $(OBJS_DIR)
+	@rm -f $(LIBFT_OBJS) $(LIBS_OBJS_BONUS) $(GNL_OBJS) $(PRINTF_OBJS)
 	@echo "libft clean done!"
-	@make clean -s -C $(PRINTF_PATH)
 
 fclean: clean
 	@rm -f $(NAME)
 	@echo "libft fclean done!"
-	@make fclean -s -C $(PRINTF_PATH)
 
 re: fclean all
 
-.PHONY: re all clean fclean bonus printf
+.PHONY: re all clean fclean printf
